--- a/07/index.html
+++ b/07/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>coordinate</title>
+    <title>cooa5rdinate</title>
 </head>
 <body>
 <script type="text/javascript" src="js/main.js"></script>
