--- a/07/indexAlex.html
+++ b/07/indexAlex.html
@@ -5,6 +5,6 @@
     <title>Task1</title>
 </head>
 <body>
-<script src='jsAlex/app.js'></script>
+<script src="jsAlex/app.js"></script>
 </body>
 </html>
